few changes for legibility. Fixed social links

--- a/src/components/IntroSection/AnimatedSection/AnimatedSection.css
+++ b/src/components/IntroSection/AnimatedSection/AnimatedSection.css
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: center;
     text-align:center;
-    font-size:2.5em;
+    /* font-size:2.5em; */
     line-height: 55px;    
 }
 .typed-cursor{
