--- a/src/components/IntroSection/AnimatedSection/TypingText/TypingText.css
+++ b/src/components/IntroSection/AnimatedSection/TypingText/TypingText.css
@@ -2,5 +2,6 @@
     vertical-align: middle;
     bottom:20px;
     padding:40px;
+    font-size: 3em;
 }
 
